# aerell

./: .env.build.example  .env.example  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.txt  build.sh  configure.sh  dev.sh  install.sh  main.arl  pyproject.toml
aerell/: CMakeLists.txt  __main__.py
aerell/src/: main.c
argp/: CMakeLists.txt
argp/include/: argp.h
argp/include/interface/argp/: argp.h
argp/include/private/: argp.h  argp_long_option.h  argp_option.h  argp_short_option.h
argp/src/: argp.c  argp_long_option.c  argp_option.c  argp_short_option.c
cmake/: Projects.cmake
designs/: error message.txt  philosophy and motto.txt
dev-resources/: file_header_comment_template.txt
dev-resources/help_message/: aerell_help_message.txt  cargo_help_message.txt  dart_help_message.txt
docs/: TODO.txt  compiler_scheme.txt  file_header_comment_template.txt  grammar.ebnf  unknown.txt
docs/help_message/: aerell_help_message.txt
examples/: hello_aerell.n  hello_world.arl  helloworld.arl  main.arl  main.n  print.arl  std.arl  up_and_down.arl
examples/expr/: main.arl
examples/func/: main.arl
examples/hw/: hw.arl  main.arl
examples/main/: main.arl
examples/main/std/: main.arl
include/: config.h.in
include/aerell/: cli.hpp  error_code.hpp  file.h  file.hpp  ir.hpp  lexer.h  lexer.hpp  message.hpp  module.hpp  parser.h  parser.hpp  semantic.hpp  str.h  type.hpp  vm.hpp
include/aerell/ast/: ast.h  ast.hpp  ast_func.h  ast_func_call.h  ast_func_param.h  ast_kind.hpp  ast_literal.h  ast_type.h
include/aerell/c/: c_emit.h
include/aerell/cli/: cli.h
include/aerell/codegen/: codegen.h
include/aerell/compiler/: compiler.h
include/aerell/file/: file.h  file_manager.h
include/aerell/ir/: ir.h  ir_block.h  ir_chr.h  ir_f32.h  ir_func.h  ir_func_call.h  ir_gen.h  ir_i32.h  ir_instruct.h  ir_llvm.h  ir_mod.h  ir_str.h  ir_type.h  ir_val.h
include/aerell/lexer/: lexer.h
include/aerell/linker/: linker.h
include/aerell/llvm/: llvm_init.h  llvm_ir.h  llvm_ir_gen.h  llvm_ir_mod.h
include/aerell/module/: inst.hpp  inst_kind.hpp  label.hpp  module.hpp
include/aerell/parser/: parser.h
include/aerell/reader/: char_reader.h
include/aerell/semantic/: semantic.h
include/aerell/source/: source.h  source_file.h  source_manager.h
include/aerell/support/: argparse.h  exe.h  ostream.h  utils.h
include/aerell/symbol/: symbol.h  symbol.hpp  symbol_func.h  symbol_kind.hpp  symbol_print.h  symbol_table.h  symbol_type.h  symbol_var.h
include/aerell/token/: lexeme.hpp  token.h  token.hpp  token_kind.hpp  token_loc.h  token_tag.h  token_type.h  tokenizer.h
include/lexer/: lexer.h
include/lexer/token/: token.h  token_type.h  tokens.h
include/parser/: parser.h
include/parser/ast/: ast.h  ast_type.h  asts.h
include/token/: token.h  token_type.h  tokens.h
projects/: CMakeLists.txt
projects/aerell/: CMakeLists.txt
projects/aerell/src/: main.c
projects/aerellc/: CMakeLists.txt
projects/aerellc/include/lexer/: lexer.h
projects/aerellc/include/lexer/token/: token.h  token_type.h  tokens.h
projects/aerellc/include/parser/: parser.h
projects/aerellc/include/parser/ast/: ast.h  ast_type.h  asts.h
projects/aerellc/include/private/aerellc/lexer/: lexer.h
projects/aerellc/include/private/aerellc/lexer/token/: token.h  token_type.h  tokens.h
projects/aerellc/include/private/aerellc/parser/: parser.h
projects/aerellc/include/private/aerellc/parser/ast/: ast.h  asts.h
projects/aerellc/include/private/aerellc/source/: source_file.h  source_manager.h
projects/aerellc/include/source/: source_file.h  source_manager.h
projects/aerellc/include/support/range/: range.h  range_table.h  ranges.h
projects/aerellc/include/support/unicode/: unicode.h  unicode_range_tables.h  unicode_ranges.h
projects/aerellc/src/: main.c
projects/aerellc/src/lexer/: lexer.c
projects/aerellc/src/lexer/token/: token.c  token_type.c  tokens.c
projects/aerellc/src/parser/: parser.c
projects/aerellc/src/parser/ast/: ast.c  asts.c
projects/aerellc/src/source/: source_file.c  source_manager.c
projects/aerellc/src/support/range/: range_table.c  ranges.c
projects/aerellc/src/support/unicode/: gen_unicode_ranges_c.py  generate_unicode_range_tables_c.py  unicode.c  unicode_range_tables.c  unicode_ranges.c  utf8.c
projects/argp/: CMakeLists.txt
projects/argp/include/interface/argp/: argp.h
projects/argp/include/private/: argp.h
projects/argp/src/: argp.c
projects/core/: CMakeLists.txt
projects/core/include/public/core/: string.h
projects/core/src/: string.c
projects/lexer/: CMakeLists.txt
projects/lexer/include/interface/lexer/: lexer.h
projects/lexer/include/private/lexer/token/: token.h  token_type.h  tokens.h
projects/lexer/include/public/lexer/: lexer.h
projects/lexer/include/public/lexer/token/: token.h  token_type.h  tokens.h
projects/lexer/src/: lexer.c
projects/lexer/src/token/: token.c  token_type.c  tokens.c
projects/parser/: CMakeLists.txt
projects/parser/include/interface/parser/: parser.h
projects/parser/include/private/parser/: parser.h
projects/parser/include/private/parser/ast/: ast.h  ast_type.h
projects/parser/src/: parser.c
projects/parser/src/parser/ast/: ast.c  asts.c
projects/source/: CMakeLists.txt
projects/source/include/interface/source/: source.h
projects/source/include/private/source/: source_file.h
projects/source/src/: source_file.c
projects/support/: CMakeLists.txt
projects/support/src/: string.c
scripts/: aerell.sh  build.sh  build_and_install.sh  builds.sh  env.sh  install.sh  test.sh
src/: CMakeLists.txt  main.c
src/aerell/: CMakeLists.txt  aerell.c  ast.c  cli.cpp  file.c  file.cpp  ir.cpp  lexer.c  lexer.cpp  main.c  main.cpp  message.cpp  module.cpp  parse.c  parser.c  parser.cpp  semantic.cpp  str.c  tokenizer.c  vm.cpp
src/aerell/app/: main.cpp
src/aerell/ast/: ast.c  ast.cpp  ast_func.cpp  ast_func_call.cpp  (+2 more)
src/lexer/: lexer.c
src/parser/: parser.c
src/std/: io.arl  rt.arl  std.arl
src/token/: token.c  tokens.c
(+152 files in other folders)
