# -----------------------------------------------------------------------------
# Copyright (c) 2025, The Aerell Language Project Authors
# All rights reserved.
# 
# This file is part of the Aerell Language project.
# 
# Licensed under the BSD 3-Clause License. 
# You may obtain a copy of the License at:
# https://github.com/aerell-lang/aerell/blob/main/LICENSE
# 
# File: CMakeLists.txt
# Description: Contains the list of all subprojects and their inclusion order.
# Author: Fern Aerell fernaerell2020@gmail.com
# Created: 2025-08-21
# -----------------------------------------------------------------------------

add_subdirectory("aerell")
add_subdirectory("argp")